fix: Add el-get/.status.el and move some codes from .emacs to init.el

--- a/.emacs.desktop
+++ b/.emacs.desktop
@@ -2,19 +2,19 @@
 ;; --------------------------------------------------------------------------
 ;; Desktop File for Emacs
 ;; --------------------------------------------------------------------------
-;; Created Sun Apr 10 23:14:27 2016
+;; Created Mon Apr 11 14:38:55 2016
 ;; Desktop file format version 206
 ;; Emacs version 24.5.1
 
 ;; Global section:
-(setq desktop-saved-frameset [frameset 1 (22282 28115 148505 618000) (desktop . "206") "mono@mono-Vm" nil nil ((((font-backend xft x) (font . "-unknown-Ubuntu Mono-normal-normal-normal-*-17-*-*-*-m-0-iso10646-1") (font-parameter . "Ubuntu Mono 13") (border-width . 0) (internal-border-width . 0) (right-divider-width . 0) (bottom-divider-width . 0) (vertical-scroll-bars) (foreground-color . "#eeeeee") (background-color . "#102e4e") (mouse-color . "white") (border-color . "black") (screen-gamma) (line-spacing) (left-fringe . 9) (right-fringe . 9) (scroll-bar-foreground . "#506070") (scroll-bar-background . "gray") (menu-bar-lines . 1) (tool-bar-lines . 0) (title) (wait-for-wm . t) (fullscreen . maximized) (tool-bar-position . top) (icon-type . t) (auto-raise) (auto-lower) (cursor-type . box) (scroll-bar-width . 0) (alpha) (horizontal-scroll-bars . t) (display-type . color) (background-mode . dark) (cursor-color . "green") (sticky) (environment) (frameset--id . "ECF1-E2B9-2726-833B") (frameset--mini t . t) (modeline . t) (minibuffer . t) (unsplittable) (icon-name) (display . ":0") (explicit-name) (visibility . t) (height . 50) (width . 211) (left . 0) (top . 28)) ((min-height . 4) (min-width . 20) (min-height-ignore . 4) (min-width-ignore . 8) (min-height-safe . 1) (min-width-safe . 4) (min-pixel-height . 76) (min-pixel-width . 180) (min-pixel-height-ignore . 76) (min-pixel-width-ignore . 72) (min-pixel-height-safe . 19) (min-pixel-width-safe . 36)) hc (pixel-width . 1920) (pixel-height . 945) (total-width . 213) (total-height . 50) (normal-height . 1.0) (normal-width . 1.0) (combination-limit) (leaf (pixel-width . 957) (pixel-height . 945) (total-width . 106) (total-height . 50) (normal-height . 1.0) (normal-width . 0.5) (parameters (purpose-dedicated . t)) (buffer "test.py" (selected) (hscroll . 0) (fringes 9 9 nil) (margins 1) (scroll-bars 0 0 nil nil) (vscroll . 0) (dedicated) (point . 31) (start . 1))) (leaf (last . t) (pixel-width . 963) (pixel-height . 945) (total-width . 107) (total-height . 50) (normal-height . 1.0) (normal-width . 0.5) (buffer "init.el" (selected . t) (hscroll . 0) (fringes 9 9 nil) (margins 2) (scroll-bars 0 0 t nil) (vscroll . 0) (dedicated) (point . 948) (start . 1)))))])
+(setq desktop-saved-frameset [frameset 1 (22283 18047 355680 30000) (desktop . "206") "mono@mono-vm" nil nil ((((font-backend xft x) (font . "-unknown-Ubuntu Mono-normal-normal-normal-*-17-*-*-*-m-0-iso10646-1") (font-parameter . "Ubuntu Mono 13") (border-width . 0) (internal-border-width . 0) (right-divider-width . 0) (bottom-divider-width . 0) (vertical-scroll-bars) (foreground-color . "#eeeeee") (background-color . "#102e4e") (mouse-color . "white") (border-color . "black") (screen-gamma) (line-spacing) (left-fringe . 9) (right-fringe . 9) (scroll-bar-foreground . "#506070") (scroll-bar-background . "gray") (menu-bar-lines . 1) (tool-bar-lines . 0) (title) (wait-for-wm . t) (fullscreen . maximized) (tool-bar-position . top) (icon-type . t) (auto-raise) (auto-lower) (cursor-type . box) (scroll-bar-width . 0) (alpha) (horizontal-scroll-bars . t) (display-type . color) (background-mode . dark) (cursor-color . "green") (sticky) (environment) (frameset--id . "ECF1-E2B9-2726-833B") (frameset--mini t . t) (modeline . t) (minibuffer . t) (unsplittable) (icon-name) (display . ":0") (explicit-name) (visibility . t) (height . 50) (width . 211) (left . 0) (top . 28)) ((min-height . 4) (min-width . 20) (min-height-ignore . 4) (min-width-ignore . 8) (min-height-safe . 1) (min-width-safe . 4) (min-pixel-height . 76) (min-pixel-width . 180) (min-pixel-height-ignore . 76) (min-pixel-width-ignore . 72) (min-pixel-height-safe . 19) (min-pixel-width-safe . 36)) hc (pixel-width . 1920) (pixel-height . 945) (total-width . 213) (total-height . 50) (normal-height . 1.0) (normal-width . 1.0) (combination-limit) (leaf (pixel-width . 957) (pixel-height . 945) (total-width . 106) (total-height . 50) (normal-height . 1.0) (normal-width . 0.5) (buffer ".emacs" (selected) (hscroll . 0) (fringes 9 9 nil) (margins 1) (scroll-bars 0 0 nil nil) (vscroll . 0) (dedicated) (point . 28) (start . 1))) (leaf (last . t) (pixel-width . 963) (pixel-height . 945) (total-width . 107) (total-height . 50) (normal-height . 1.0) (normal-width . 0.5) (buffer "init.el" (selected . t) (hscroll . 0) (fringes 9 9 nil) (margins 2) (scroll-bars 0 0 t nil) (vscroll . 0) (dedicated) (point . 853) (start . 411)))))])
 (setq desktop-missing-file-warning nil)
 (setq tags-file-name nil)
 (setq tags-table-list nil)
 (setq search-ring '("session"))
 (setq regexp-search-ring '("\\<ess\\>" "<ess>" "\\<ess\343\200\201\343\200\213"))
-(setq register-alist '((48 . "(require 'session)")))
-(setq file-name-history '("~/.emacs.d/lisp/init-R.el" "~/.emacs.d/init.el" "~/.emacs" "~/Documents/Python_Project/test.py" "~/Documents/R_Project/test.R" "~/.emacs.d/lisp/init-Python.el" "~/.emacs.d/el-get/.loaddefs.el" "~/.emacs.d/init-base.el" "~/.emacs.d/init-tabbar.el" "~/\344\271\224\345\270\203\346\226\257\344\274\240.txt"))
+(setq register-alist '((48 . ";;(autoload 'session-jump-to-last-change \"session\" nil t)\n;;(autoload 'session-initialize \"session\" nil t)\n;;(eval-after-load \"cus-load\"\n;;   '(progn (custom-add-load 'data 'session)\n;;           (custom-add-load 'session 'session)))")))
+(setq file-name-history '("~/.emacs.d/el-get/.loaddefs.el" "~/.emacs.d/lisp/init-R.el" "~/.emacs.d/init.el" "~/.emacs" "~/Documents/Python_Project/test.py" "~/Documents/R_Project/test.R" "~/.emacs.d/lisp/init-Python.el" "~/.emacs.d/init-base.el" "~/.emacs.d/init-tabbar.el" "~/\344\271\224\345\270\203\346\226\257\344\274\240.txt"))
 
 ;; Buffer section -- buffers listed in same order as in buffer list:
 (desktop-create-buffer 206
@@ -22,8 +22,8 @@
   "init.el"
   'emacs-lisp-mode
   '(helm-mode auto-complete-mode linum-mode global-auto-revert-mode purpose-mode)
-  948
-  '(784 nil)
+  853
+  '(1815 nil)
   nil
   nil
   '((buffer-file-coding-system . utf-8-unix)))
@@ -34,10 +34,32 @@
   'emacs-lisp-mode
   '(helm-mode auto-complete-mode linum-mode global-auto-revert-mode purpose-mode)
   28
-  '(28 nil)
+  '(29 nil)
   nil
   nil
   '((buffer-file-coding-system . undecided-unix)))
+
+(desktop-create-buffer 206
+  "/home/mono/.emacs.d/el-get/.loaddefs.el"
+  ".loaddefs.el"
+  'emacs-lisp-mode
+  '(helm-mode auto-complete-mode linum-mode global-auto-revert-mode purpose-mode)
+  46817
+  '(46817 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-unix) (overwrite-mode)))
+
+(desktop-create-buffer 206
+  "/home/mono/.emacs.d/lisp/init-Python.el"
+  "init-Python.el"
+  'emacs-lisp-mode
+  '(helm-mode auto-complete-mode linum-mode global-auto-revert-mode purpose-mode)
+  682
+  '(739 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . prefer-utf-8-unix)))
 
 (desktop-create-buffer 206
   "/home/mono/.emacs.d/lisp/init-R.el"
@@ -51,28 +73,6 @@
   '((buffer-file-coding-system . prefer-utf-8-unix)))
 
 (desktop-create-buffer 206
-  "/home/mono/Documents/Python_Project/test.py"
-  "test.py"
-  'python-mode
-  '(helm-mode auto-complete-mode linum-mode global-auto-revert-mode purpose-mode)
-  31
-  '(31 nil)
-  nil
-  nil
-  '((tab-width . 8) (indent-tabs-mode) (buffer-file-coding-system . utf-8-unix)))
-
-(desktop-create-buffer 206
-  "/home/mono/Documents/R_Project/test.R"
-  "test.R"
-  'ess-mode
-  '(helm-mode auto-complete-mode linum-mode global-auto-revert-mode purpose-mode eldoc-mode)
-  100
-  '(97 nil)
-  nil
-  nil
-  '((indent-tabs-mode) (buffer-file-coding-system . undecided-unix)))
-
-(desktop-create-buffer 206
   nil
   "*info*"
   'Info-mode
@@ -82,17 +82,6 @@
   t
   '("/home/mono/.emacs.d/el-get/el-get/el-get" "Recipe format" ((history ("/home/mono/.emacs.d/el-get/el-get/el-get" "Authoring Recipes" 32102) ("/home/mono/.emacs.d/el-get/el-get/el-get" "Top" 1220) ("/home/mono/.emacs.d/el-get/el-get/el-get" "Before and After properties" 26228) ("/home/mono/.emacs.d/el-get/el-get/el-get" "User Init" 26182) ("/home/mono/.emacs.d/el-get/el-get/el-get" "Organizing recipes" 30485) ("/home/mono/.emacs.d/el-get/el-get/el-get" "Recipes" 28795) ("/home/mono/.emacs.d/el-get/el-get/el-get" "Top" 1207) ("dir" "Top" 551))))
   '((tab-width . 8) (buffer-file-coding-system . utf-8-unix) (case-fold-search . t)))
-
-(desktop-create-buffer 206
-  "/home/mono/.emacs.d/lisp/init-Python.el"
-  "init-Python.el"
-  'emacs-lisp-mode
-  '(helm-mode auto-complete-mode linum-mode global-auto-revert-mode purpose-mode)
-  682
-  '(739 nil)
-  nil
-  nil
-  '((buffer-file-coding-system . prefer-utf-8-unix)))
 
 (desktop-create-buffer 206
   nil
@@ -136,17 +125,6 @@
   '(nil nil)
   t
   '("/home/mono/Documents/")
-  nil)
-
-(desktop-create-buffer 206
-  nil
-  "Python_Project"
-  'dired-mode
-  '(helm-mode linum-mode global-auto-revert-mode purpose-mode)
-  178
-  '(nil nil)
-  t
-  '("/home/mono/Documents/Python_Project/")
   nil)
 
 (desktop-create-buffer 206
